Setup angular material calendar. Alignment to be fixed.

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/cdk/overlay-prebuilt.css';
 @import "../node_modules/angular-calendar/css/angular-calendar.css";
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 
 .sec-heading {
     font-weight: bold;
@@ -8,74 +9,3 @@
     text-align: left;
     padding: 10px;
 }
-  
-.cal-month-view .cal-cell-row:hover {
-      background-color: #cac3c3;
-    }
-
-.cal-month-view .cal-cell-row {
-        height: 80%;
-        display: flex;
-      }
-
-.cal-month-view .cal-cell-top {
-      min-height: 1%;  
-      height: 1%;
-      flex: 1;
-    }
-
-.cal-month-view .cal-day-cell {
-      min-height: 50%;  
-      height: 50%;
-      cursor:pointer;
-    }
-  
-.cal-month-view .cal-days .cal-cell-row {
-      border-bottom: 1px solid #e1e1e1;
-      height: 80%;
-    }  
-
-    .cal-month-view {
-      width: 100%;
-    }
-    .cal-month-view .cal-days {
-      border-right:  1px solid #e1e1e1;
-    }
-
-.cal-month-view .cal-day-number {
-      font-size: 100%;
-      font-weight: bolder;
-    }
-  
-.cal-month-view .cal-day-cell.cal-weekend .cal-day-number {
-      color: darkred;
-      font-weight: bolder;
-    }
-  
-    .cal-month-view .cal-day-cell.cal-today {
-      background-color: azure;
-      height: 50%;
-      font-weight: bolder;
-      opacity : 1;
-      cursor:pointer;
-    }
-  
-    .cal-month-view .cal-day-cell.cal-today .cal-day-number {
-      font-size: 100%;
-      height: 50%;
-      font-weight: bolder;
-      opacity : 1;
-    }
-
-    .cal-month-view .cal-disabled {
-      background-color: #eee;
-      cursor: not-allowed;
-    }
-    
-    .cal-month-view .cal-disabled .cal-day-number {
-      opacity: 0.1;
-    }
-
-    .cal-month-view .cal-day-selected {
-      background-color: #f3e9be
-    }
